force-app/main/default/objects/SVMXA360__CONF_ConfigurationFilter__c/SVMXA360__CONF_ConfigurationFilter__c.object-meta.xml
<CustomObject>
    <description>Configuration Filters is used to create criteria and tags filters for configuration</description>
    <label>Configuration Filter</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Filter Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Configuration Filters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>