force-app/main/default/objects/SVMXA360__CONF_ConfigurationFilter__c/fields/SVMXA360__Columns__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__Columns__c</fullName>
    <description>It is used to store column names of configuration filter.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Columns</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>