force-app/main/default/objects/SVMXA360__CONF_ConfigurationFilter__c/fields/SVMXA360__DeveloperName__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__DeveloperName__c</fullName>
    <description>It is used to store the unique developer name of Configuration Filter</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Developer Name</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>