force-app/main/default/objects/SVMXA360__CONF_ConfigurationFilter__c/fields/SVMXA360__FilterCriteriaId__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__FilterCriteriaId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>It is used to store filter criteria of configuration filter</description>
    <label>Filter Criteria</label>
    <referenceTo>SVMXA360__CONF_Expression__c</referenceTo>
    <relationshipLabel>Configuration Filters</relationshipLabel>
    <relationshipName>ConfigurationFilters</relationshipName>
    <type>Lookup</type>
</CustomField>