force-app/main/default/objects/SVMXA360__CONF_ConfigurationFilter__c/fields/SVMXA360__FilterTags__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__FilterTags__c</fullName>
    <description>It is used to store the tags used to filter in configuration filter.</description>
    <label>Filter Tags</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Tag</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>