force-app/main/default/objects/SVMXA360__CONF_ConfigurationFilter__c/fields/SVMXA360__ObjectAPIName__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__ObjectAPIName__c</fullName>
    <description>It is used to store the object API name on which object configuration filter is applied</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Object API Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>